--- a/index.html
+++ b/index.html
@@ -2,38 +2,30 @@
 <html lang="en">
 
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-
-    <title>Etudiant développeur de logiciels et applications</title>
-
+    <title>Apprenti développeur de logiciels et applications</title>
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
     <!-- Theme CSS -->
     <link href="css/freelancer.css" rel="stylesheet">
-
     <!-- Custom Fonts -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
 </head>
 
 <body id="page-top" class="index">
-<div id="skipnav"><a href="#maincontent">Skip to main content</a></div>
-
+    <div id="skipnav"><a href="#maincontent">Skip to main content</a></div>
     <!-- Navigation -->
     <nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom">
         <div class="container">
@@ -44,7 +36,6 @@
                 </button>
                 <a class="navbar-brand" href="#page-top">Thomas Caillier</a>
             </div>
-
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
@@ -66,7 +57,6 @@
         </div>
         <!-- /.container-fluid -->
     </nav>
-
     <!-- Header -->
     <header>
         <div class="container" id="maincontent" tabindex="-1">
@@ -74,7 +64,7 @@
                 <div class="col-lg-12">
                     <img class="img-responsive img-profile" src="img/profil2.png" alt="">
                     <div class="intro-text">
-                        <h1 class="name">Etudiant développeur</h1>
+                        <h1 class="name">Apprenti développeur</h1>
                         <hr class="star-light">
                         <span class="skills">Ingénierie logicielle - Applications mobiles - Web</span>
                     </div>
@@ -82,11 +72,10 @@
             </div>
         </div>
     </header>
-
     <!-- Portfolio Grid Section -->
     <section id="portfolio">
         <div class="container">
-            <div class="row">
+            <div id="portfolioTitle" class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Portfolio</h2>
                     <hr class="star-primary">
@@ -100,7 +89,8 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/software_dev.svg" class="img-responsive" alt="Cabin">
+                        <img id="imgModal1" src="img/software_dev.svg" class="img-responsive" alt="Cabin">
+                        <h1>Ingénierie logicielle</h1>
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -110,7 +100,8 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/mobile_dev.svg" class="img-responsive" alt="Slice of cake">
+                        <img id="imgModal2" src="img/mobile_dev.svg" class="img-responsive" alt="Slice of cake">
+                        <h1>Applications mobiles</h1>
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -120,28 +111,28 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/web_dev.svg" class="img-responsive" alt="Circus tent">
+                        <img id="imgModal3" src="img/web_dev.svg" class="img-responsive" alt="Circus tent">
+                        <h1>Développement web</h1>
                     </a>
                 </div>
             </div>
         </div>
     </section>
-
     <!-- About Section -->
     <section class="success" id="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>About</h2>
+                    <h2>A propos</h2>
                     <hr class="star-light">
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    <p>J'ai découvert le développement web au lycée avec l'option ISN. Ca m'a plu, donc je suis parti en études d'informatique. J'ai trouvé ma voie! Interssé par plusieurs domaines, j'ai décidé de continuer pour passer mon diplôme d'ingénieur.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+                    <p>Basketteur pendant 5 ans, le sport que j'apprécie par dessus tout est le ski alpin. J'aime la musique, je suis interessé par tous les genres, mais <img src="img/rock.png"></img> tout-de-même. Je vais au cinéma, thrillers avant tout.</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="#" class="btn btn-lg btn-outline">
@@ -151,7 +142,6 @@
             </div>
         </div>
     </section>
-
     <!-- Contact Section -->
     <section id="contact">
         <div class="container">
@@ -206,7 +196,6 @@
             </div>
         </div>
     </section>
-
     <!-- Footer -->
     <footer class="text-center">
         <div class="footer-above">
@@ -254,14 +243,12 @@
             </div>
         </div>
     </footer>
-
     <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
     <div class="scroll-top page-scroll hidden-sm hidden-xs hidden-lg hidden-md">
         <a class="btn btn-primary" href="#page-top">
             <i class="fa fa-chevron-up"></i>
         </a>
     </div>
-
     <!-- Portfolio Modals -->
     <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
@@ -485,23 +472,17 @@
             </div>
         </div>
     </div>
-
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
-
     <!-- Bootstrap Core JavaScript -->
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-
     <!-- Plugin JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-
     <!-- Contact Form JavaScript -->
     <script src="js/jqBootstrapValidation.js"></script>
     <script src="js/contact_me.js"></script>
-
     <!-- Theme JavaScript -->
     <script src="js/freelancer.min.js"></script>
-
 </body>
 
 </html>
