--- a/index.html
+++ b/index.html
@@ -173,14 +173,14 @@
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label for="phone">Téléphone</label>
-                                <input type="tel" class="form-control" placeholder="Téléphone" id="phone" required data-validation-required-message="Veuillez entrer votre numéro de téléphone.">
+                                <input type="tel" class="form-control" placeholder="Téléphone (facultatif)" id="phone">
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label for="message">Message</label>
-                                <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
+                                <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Veuillez entrer un message."></textarea>
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
