--- a/index.html
+++ b/index.html
@@ -159,28 +159,28 @@
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label for="name">Nom</label>
-                                <input type="text" class="form-control" placeholder="Nom" id="name" required data-validation-required-message="Veuillez entrer notre nom.">
+                                <input type="text" class="form-control" placeholder="Nom" id="name" name="name" required data-validation-required-message="Veuillez entrer notre nom.">
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label for="email">Email</label>
-                                <input type="email" class="form-control" placeholder="Email" id="email" required data-validation-required-message="Veuillez entrer votre adresse mail.">
+                                <input type="email" class="form-control" placeholder="Email" id="email" name="email" required data-validation-required-message="Veuillez entrer votre adresse mail.">
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label for="phone">Téléphone</label>
-                                <input type="tel" class="form-control" placeholder="Téléphone (facultatif)" id="phone">
+                                <input type="tel" class="form-control" placeholder="Téléphone (facultatif)" id="phone" name="phone">
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label for="message">Message</label>
-                                <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Veuillez entrer un message."></textarea>
+                                <textarea rows="5" class="form-control" placeholder="Message" id="message" name="message" required data-validation-required-message="Veuillez entrer un message."></textarea>
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
