--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     <p>J'ai découvert le développement web au lycée avec l'option ISN. Ca m'a plu, donc je suis parti en études d'informatique. J'ai trouvé ma voie! Interssé par plusieurs domaines, j'ai décidé de continuer pour passer mon diplôme d'ingénieur.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Basketteur pendant 5 ans, le sport que j'apprécie par dessus tout est le ski alpin. J'aime la musique, je suis interessé par tous les genres, mais <img src="img/rock.png"></img> tout-de-même. Je vais au cinéma, thrillers avant tout.</p>
+                    <p>Basketteur pendant 5 ans, le sport que j'apprécie par dessus tout est le ski alpin. J'aime la musique, je suis interessé par tous les genres, mais bon, ROCK <img src="img/rock.png"></img>. Je vais au cinéma, thrillers avant tout.</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="doc/CV(v3).pdf" class="btn btn-lg btn-outline">
@@ -210,25 +210,22 @@
                         <h3>Sur le web</h3>
                         <ul class="list-inline">
                             <li>
-                                <a href="#" class="btn-social btn-outline"><span class="sr-only">Facebook</span><i class="fa fa-fw fa-facebook"></i></a>
-                            </li>
-                            <li>
                                 <a href="https://plus.google.com/u/0/117265766529966773073" class="btn-social btn-outline"><span class="sr-only">Google Plus</span><i class="fa fa-fw fa-google-plus"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><span class="sr-only">Twitter</span><i class="fa fa-fw fa-twitter"></i></a>
                             </li>
                             <li>
                                 <a href="https://www.linkedin.com/in/thomas-caillier" class="btn-social btn-outline"><span class="sr-only">Linked In</span><i class="fa fa-fw fa-linkedin"></i></a>
                             </li>
                             <li>
-                                <a href="#" class="btn-social btn-outline"><span class="sr-only">Dribble</span><i class="fa fa-fw fa-dribbble"></i></a>
+                                <a href="https://github.com/thomascaillier" class="btn-social btn-outline"><span class="sr-only">GitGub</span><i class="fa fa-fw fa-github"></i></a>
+                            </li>
+                            <li>
+                                <a href="https://open.spotify.com/user/thomascaillier" class="btn-social btn-outline"><span class="sr-only">Spotify</span><i class="fa fa-fw fa-spotify"></i></a>
                             </li>
                         </ul>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Merci aux équipes de :</h3>
-                        <p><a href="http://getbootstrap.com">Bootstrap</a>, <a href="http://github.com">GitHub</a>, <a href="http://startbootstrap.com">Start Bootstrap</a></p>
+                        <p><a href="http://jquery.com">JQuery</a> , <a href="http://thenounproject.com">The Noun Project</a> , <a href="http://github.com">GitHub</a> , <a href="http://startbootstrap.com">Start Bootstrap</a> , <a href="https://formspree.io/">Formspree</a></p>
                     </div>
                 </div>
             </div>
@@ -237,7 +234,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Your Website 2016
+                        Copyright &copy; thomasc.pro 2016
                     </div>
                 </div>
             </div>
