Adding emploi section

--- a/index.html
+++ b/index.html
@@ -202,9 +202,8 @@
             <div class="container">
                 <div class="row">
                     <div class="footer-col col-md-4">
-                        <h3>Location</h3>
-                        <p>3481 Melrose Place
-                            <br>Beverly Hills, CA 90210</p>
+                        <h3>Emploi</h3>
+                        <p>Actuellement chez Polyedre, je suis intéressé pour de l'alternance en école d'ingénieur. N'hésitez pas à me <a href="#contact">contacter </a>!</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Sur le web</h3>
