--- a/index.html
+++ b/index.html
@@ -209,6 +209,9 @@
                                 <a href="https://github.com/thomascaillier" class="btn-social btn-outline"><span class="sr-only">GitGub</span><i class="fa fa-fw fa-github"></i></a>
                             </li>
                             <li>
+                                <a href="http://www.doyoubuzz.com/thomas-caillier" class="btn-social btn-outline"><span class="sr-only">Do You Buzz</span><i class="fa fa-fw fa-vcard"></i></a>
+                            </li>
+                            <li>
                                 <a href="https://open.spotify.com/user/thomascaillier" class="btn-social btn-outline"><span class="sr-only">Spotify</span><i class="fa fa-fw fa-spotify"></i></a>
                             </li>
                         </ul>
@@ -332,13 +335,20 @@
                             <img src="img/web_dev.svg" class="img-responsive" alt="Slice of cake">
                             <h3>J'ai de l'expérience en:</h3>
                             <ul class="item-details modal-list">
-                                <li><h4>HTML</h4></li>
-                                <li><h4>CSS</h4></li>
-                                <li><h4>Javascript</h4></li>
-                                <li><h4>AJAX</h4></li>
-                                <li><h4>JQuery</h4></li>
-                                <li><h4>PHP</h4></li>
-                                <li><h4>SQL</h4></li>
+                                <li>
+                                    <h4>HTML</h4></li>
+                                <li>
+                                    <h4>CSS</h4></li>
+                                <li>
+                                    <h4>Javascript</h4></li>
+                                <li>
+                                    <h4>AJAX</h4></li>
+                                <li>
+                                    <h4>JQuery</h4></li>
+                                <li>
+                                    <h4>PHP</h4></li>
+                                <li>
+                                    <h4>SQL</h4></li>
                             </ul>
                             <h3>Je suis également intéressé par:</h3>
                             <ul class="item-details modal-list">
@@ -367,6 +377,23 @@
     <script src="js/contact_me.js"></script>
     <!-- Theme JavaScript -->
     <script src="js/freelancer.min.js"></script>
+    <!-- Google Analytics -->
+    <script>
+    (function(i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function() {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+    ga('create', 'UA-93436251-1', 'auto');
+    ga('send', 'pageview');
+    </script>
 </body>
 
 </html>
