Adding hreflang for google

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="description" content="Site portfolio de Thomas Caillier">
     <meta name="author" content="Thomas Caillier">
     <title>Apprenti développeur de logiciels et applications</title>
+    <!-- Lang indication for Google -->
+    <link rel="alternate" hreflang=fr href="http://thomasc.pro/"/>
     <!-- Bootstrap CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- CSS -->
