--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>J'ai découvert le développement web au lycée avec l'option ISN. Ca m'a plu, donc je suis parti en études d'informatique. J'ai trouvé ma voie! Passionné par plusieurs domaines, j'ai décidé de continuer pour passer mon diplôme d'ingénieur.</p>
+                    <p>Suite à la découverte du développement web au lycée avec l'option ISN, je me suis orienté vers l'informatique... J'ai trouvé ma voie! Passionné par plusieurs domaines, j'ai décidé de continuer pour passer mon diplôme d'ingénieur.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Basketteur pendant 5 ans, le sport que j'apprécie par dessus tout est le ski alpin. J'aime la musique, je suis interessé par tous les genres, mais bon, ROCK <img src="img/rock.png"></img>. Je vais au cinéma, thrillers avant tout.</p>
+                    <p>Basketteur pendant 5 ans, le sport que j'apprécie par dessus tout est le ski alpin. Côté musique, je suis intéressé par tous les genres, mais bon, ROCK <img src="img/rock.png"></img>. Côté film, les thrillers avant tout.</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="doc/CV(v3).pdf" class="btn btn-lg btn-outline">
