--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Site portfolio de Thomas Caillier">
     <meta name="author" content="Thomas Caillier">
-    <title>Apprenti développeur de logiciels et applications</title>
+    <title>Thomas Caillier - Apprenti développeur</title>
     <!-- Lang indication for Google -->
     <link rel="alternate" hreflang=fr href="http://thomasc.pro/"/>
     <!-- Bootstrap CSS -->
@@ -25,14 +25,14 @@
 </head>
 
 <body id="page-top" class="index">
-    <div id="skipnav"><a href="#maincontent">Skip to main content</a></div>
+    <div id="skipnav"><a href="#maincontent">Aller au contenu principal</a></div>
     <nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom">
         <div class="container">
             <div class="navbar-header page-scroll">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
+                    <span class="sr-only"></span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="#page-top">Thomas Caillier</a>
+                <a class="navbar-brand" href="#page-top"><h1>Thomas Caillier</h1></a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
