--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Thomas Caillier">
     <title>Thomas Caillier - Apprenti développeur</title>
     <!-- Lang indication for Google -->
-    <link rel="alternate" hreflang=fr href="http://thomasc.pro/"/>
+    <link rel="alternate" hreflang=fr href="http://thomasc.pro/" />
     <!-- Bootstrap CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- CSS -->
@@ -379,6 +379,48 @@
     <script src="js/contact_me.js"></script>
     <!-- Theme JavaScript -->
     <script src="js/freelancer.min.js"></script>
+    <!-- Google Structured data -->
+    <script type="application/ld+json">
+    {
+        "@context": "http://thomasc.pro/",
+        "@type": "WebSite",
+        "name": "Thomas Caillier - Apprenti développeur",
+        "headline": "Thomas Caillier",
+        "alternativeHeadline": "Apprenti développeur",
+        "image": "http://thomasc.pro/img/profil.png",
+        "description": "Un développeur en Ingénierie logicielle, Applications mobiles et Web",
+        "about": "Un développeur en Ingénierie logicielle, Applications mobiles et Web",
+        "accountablePerson": {
+            "birthDate": "1997-06-06",
+            "birthPlace": "Boulogne-sur-Mer",
+            "familyName": "Caillier",
+            "gender": "Male",
+            "givenName": "Thomas",
+            "nationality": "France",
+            "image": "http://thomasc.pro/img/profil.png"
+        },
+        "author": {
+            "birthDate": "1997-06-06",
+            "birthPlace": "Boulogne-sur-Mer",
+            "familyName": "Caillier",
+            "gender": "Male",
+            "givenName": "Thomas",
+            "nationality": "France",
+            "image": "http://thomasc.pro/img/profil.png"
+        },
+        "creator": {
+            "birthDate": "1997-06-06",
+            "birthPlace": "Boulogne-sur-Mer",
+            "familyName": "Caillier",
+            "gender": "Male",
+            "givenName": "Thomas",
+            "nationality": "France",
+            "image": "http://thomasc.pro/img/profil.png"
+        },
+        "inLinguage": "fr",
+        "keywords": ["Thomas", "Caillier", "Thomas Caillier", "Apprenti", "Alternant", "Développeur", "Logiciel", "Application", "Web", "Java", "Pyhton", "Ruby", "C", "C++", "C#", "HTML", "CSS", "JQuery", "AngularJS", "Angular", "NodeJS", "PHP",  "SQL", "Ingénieur", "Portfolio", "Alternance", "Télécom", "Emploi", "thomasc", "thomasc.pro"]
+    }
+    </script>
     <!-- Google Analytics -->
     <script>
     (function(i, s, o, g, r, a, m) {
