Adding Wizbii link
I also asked font-awesome icons for wizbii and doyoubuzz

--- a/index.html
+++ b/index.html
@@ -215,6 +215,9 @@
                             <li>
                                 <a href="https://open.spotify.com/user/thomascaillier" class="btn-social btn-outline"><span class="sr-only">Spotify</span><i class="fa fa-fw fa-spotify"></i></a>
                             </li>
+                            <li>
+                                <a href="https://www.wizbii.com/profile/thomas-caillier" class="btn-social btn-outline"><span class="sr-only">Wizbii</span><i class="fa fa-fw fa-google-wallet"></i></a>
+                            </li>
                         </ul>
                     </div>
                     <div class="footer-col col-md-4">
