Changing title of url.io

--- a/url.io/index.html
+++ b/url.io/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="URL Utilities">
     <meta name="author" content="Thomas Caillier">
-    <title>Thomas Caillier - Apprenti développeur</title>
+    <title>URL.io</title>
     <!-- Lang indication for Google -->
     <link rel="alternate" hreflang=fr href="http://thomasc.pro/url.io" />
     <!-- CSS -->
