--- a/index.html
+++ b/index.html
@@ -188,6 +188,16 @@
             </div>
         </div>
     </section>
+    <!-- ioUtils -->
+    <section class="success" id="ioUtils">
+
+            <div class="row">
+                <div class="text-center">
+                    <p>Voir aussi <a href="./io/" class="nowrap">&rArr; mes utilitaires</a></p>
+                </div>
+            </div>
+
+    </section>
     <!-- Footer -->
     <footer class="text-center">
         <div class="footer-above">
