little MAJ styling back button

--- a/io/displayArgs.io.html
+++ b/io/displayArgs.io.html
@@ -44,6 +44,8 @@
     
     .io a.back:hover{
         background-color: #FEFFF1;
+        border-left: none;
+        padding-left: calc(0.3% + 5px);
         color: #2D2E30;
     }
     
