--- a/io/url.io.html
+++ b/io/url.io.html
@@ -46,7 +46,7 @@
         min-width: 100%;
         max-width: 100%;
         height: 33%;
-        font-size: 200%;
+        font-size: 130%;
         margin-top: 1.5%;
         box-sizing: border-box;
     }
@@ -56,9 +56,9 @@
         text-align: center;
         margin: auto;
         margin-top: 1%;
-        width: 20%;
-        padding: 1%;
-        font-size: 250%;
+        width: 15%;
+        padding: 0.3%;
+        font-size: 200%;
         border: 10px solid #2D2E30;
         background-color: #2D2E30;
         color: #FEFFF1;
@@ -75,8 +75,8 @@
 <body>
     <div class="io" id="decoder_encoder">
         <h1>URL Decoder / Encoder</h1>
-        <textarea class="encoded" placeholder="Type to decode"></textarea>
-        <textarea class="decoded" placeholder="Type to encode"></textarea>
+        <textarea class="encoded" placeholder="Type an encoded URL"></textarea>
+        <textarea class="decoded" placeholder="Type an decoded URL"></textarea>
         <a id="goToDisplay" href ="displayArgs.io.html">DISPLAY ARGS</a>
     </div>
 </body>
