--- a/io/url.io.html
+++ b/io/url.io.html
@@ -82,6 +82,7 @@
 </body>
 <script src="/vendor/jquery/jquery.min.js"></script>
 <script>
+    $("textarea.encoded").focus();
     $("#goToDisplay").hide();
     function getParams(url) {
         var vars = {};
