Modals on other files & MAJ Content

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Site portfolio de Thomas Caillier">
+    <meta name="description" content="Développeur Javascript, apprenti à Polyedre">
     <meta name="author" content="Thomas Caillier">
-    <title>Thomas Caillier - Apprenti développeur</title>
+    <title>Thomas Caillier - Développeur Javascript</title>
     <!-- Lang indication for Google -->
     <link rel="alternate" hreflang=fr href="http://thomasc.pro/" />
     <!-- Bootstrap CSS -->
@@ -57,7 +57,7 @@
                 <div class="col-lg-12">
                     <img class="img-responsive img-profile" src="img/profil2.png" alt="">
                     <div class="intro-text">
-                        <h1 class="name">Apprenti développeur</h1>
+                        <h1 class="name">Développeur Javascript</h1>
                         <hr class="star-light">
                         <span class="skills">Ingénierie logicielle - Applications mobiles - Web</span>
                     </div>
@@ -75,36 +75,36 @@
             </div>
             <div class="row">
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+                    <a href="ingenierie_logicielle.html" class="portfolio-link">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
                         <img id="imgModal1" src="img/software_dev.svg" class="img-responsive" alt="Cabin">
-                        <h1>Ingénierie logicielle</h1>
+                        <h2>Ingénierie logicielle</h2>
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
+                    <a href="applications_mobiles.html" class="portfolio-link">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
                         <img id="imgModal2" src="img/mobile_dev.svg" class="img-responsive" alt="Slice of cake">
-                        <h1>Applications mobiles</h1>
+                        <h2>Applications mobiles</h2>
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+                    <a href="developpement_web.html" class="portfolio-link">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
                         <img id="imgModal3" src="img/web_dev.svg" class="img-responsive" alt="Circus tent">
-                        <h1>Développement web</h1>
+                        <h2>Développement web</h2>
                     </a>
                 </div>
             </div>
@@ -253,133 +253,7 @@
             <i class="fa fa-chevron-up"></i>
         </a>
     </div>
-    <!-- Portfolio Modals -->
-    <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
-                            <h2>Ingénierie logicielle</h2>
-                            <hr class="star-primary">
-                            <img src="img/software_dev.svg" class="img-responsive" alt="Cabin">
-                            <h3>J'ai de l'expérience en:</h3>
-                            <ul class="item-details modal-list">
-                                <li>
-                                    <h4>JAVA</h4></li>
-                                <li>
-                                    <h4>C</h4></li>
-                                <li>
-                                    <h4>Shell UNIX</h4></li>
-                            </ul>
-                            <h3>Je suis également intéressé par:</h3>
-                            <ul class="item-details modal-list">
-                                <li>
-                                    <h4>C++</h4></li>
-                                <li>
-                                    <h4>Python  <span>(déjà des bases)</span></h4></li>
-                                <li>
-                                    <h4>C#</h4></li>
-                                <li>
-                                    <h4>Ruby</h4></li>
-                            </ul>
-                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Fermer</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
-                            <h2>Applications mobiles</h2>
-                            <hr class="star-primary">
-                            <img src="img/mobile_dev.svg" class="img-responsive" alt="Slice of cake">
-                            <h3>J'ai de l'expérience en:</h3>
-                            <ul class="item-details modal-list">
-                                <li>
-                                    <h4>JAVA</h4></li>
-                            </ul>
-                            <h3>Je suis également intéressé par:</h3>
-                            <ul class="item-details modal-list">
-                                <li>
-                                    <h4>C</h4></li>
-                                <li>
-                                    <h4>C++</h4></li>
-                                <li>
-                                    <h4>C#</h4></li>
-                            </ul>
-                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Fermer</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
-                            <h2>Développement web</h2>
-                            <hr class="star-primary">
-                            <img src="img/web_dev.svg" class="img-responsive" alt="Slice of cake">
-                            <h3>J'ai de l'expérience en:</h3>
-                            <ul class="item-details modal-list">
-                                <li>
-                                    <h4>HTML</h4></li>
-                                <li>
-                                    <h4>CSS</h4></li>
-                                <li>
-                                    <h4>Javascript</h4></li>
-                                <li>
-                                    <h4>AJAX</h4></li>
-                                <li>
-                                    <h4>JQuery</h4></li>
-                                <li>
-                                    <h4>PHP</h4></li>
-                                <li>
-                                    <h4>SQL</h4></li>
-                            </ul>
-                            <h3>Je suis également intéressé par:</h3>
-                            <ul class="item-details modal-list">
-                                <li>
-                                    <h4>AngularJS</h4></li>
-                                <li>
-                                    <h4>Ruby</h4></li>
-                                <li>
-                                    <h4>C#</h4></li>
-                            </ul>
-                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Fermer</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <!-- Bootstrap Core JavaScript -->
