Correcting typing error

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
             "image": "http://thomasc.pro/img/profil.png"
         },
         "inLinguage": "fr",
-        "keywords": ["Thomas", "Caillier", "Thomas Caillier", "Apprenti", "Alternant", "Développeur", "Logiciel", "Application", "Web", "Java", "Pyhton", "Ruby", "C", "C++", "C#", "HTML", "CSS", "JQuery", "AngularJS", "Angular", "NodeJS", "PHP",  "SQL", "Ingénieur", "Portfolio", "Alternance", "Télécom", "Emploi", "thomasc", "thomasc.pro"]
+        "keywords": ["Thomas", "Caillier", "Thomas Caillier", "Apprenti", "Alternant", "Développeur", "Logiciel", "Application", "Web", "Java", "Python", "Ruby", "C", "C++", "C#", "HTML", "CSS", "JQuery", "AngularJS", "Angular", "NodeJS", "PHP",  "SQL", "Ingénieur", "Portfolio", "Alternance", "Télécom", "Emploi", "thomasc", "thomasc.pro"]
     }
     </script>
     <!-- Google Analytics -->
