Test Brackets Git

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Suite à la découverte du développemen web au lycée avec l'option ISN, je me suis orienté vers l'informatique... J'ai trouvé ma voie! Passionné par plusieurs domaines, j'ai décidé de continuer pour passer mon diplôme d'ingénieur.</p>
+                    <p>Suite à la découverte du développement web au lycée avec l'option ISN, je me suis orienté vers l'informatique... J'ai trouvé ma voie! Passionné par plusieurs domaines, j'ai décidé de continuer pour passer mon diplôme d'ingénieur.</p>
                 </div>
                 <div class="col-lg-4">
                     <p>Basketteur pendant 5 ans, le sport que j'apprécie par dessus tout est le ski alpin. Côté musique, j'aime tous les genres, mais vive le ROCK <img src="img/rock.png"/>. Côté film, les thrillers avant tout.</p>
