Correction erreur link hreflang

--- a/applications_mobiles.html
+++ b/applications_mobiles.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Thomas Caillier">
     <title>Thomas Caillier - Apprenti développeur</title>
     <!-- Lang indication for Google -->
-    <link rel="alternate" hreflang=fr href="http://thomasc.pro/" />
+    <link rel="alternate" hreflang=fr href="http://thomasc.pro/applications_mobiles.html" />
     <!-- Bootstrap CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- CSS -->
