Corrected spelling of a word

--- a/io/url.io.html
+++ b/io/url.io.html
@@ -83,7 +83,7 @@
     <div class="io" id="decoder_encoder">
         <h1>URL Decoder / Encoder</h1>
         <textarea class="encoded" placeholder="Type an encoded URL"></textarea>
-        <textarea class="decoded" placeholder="Type an decoded URL"></textarea>
+        <textarea class="decoded" placeholder="Type a decoded URL"></textarea>
         <a id="goToDisplay" href ="displayArgs.io.html">DISPLAY ARGS</a>
     </div>
 </body>
