--- a/lmgtfy/index.html
+++ b/lmgtfy/index.html
@@ -86,8 +86,8 @@ i:nth-child(5) {
     height: 34px;
 }
 
-input:focus{
-	outline: none;
+input:focus {
+    outline: none;
 }
 
 #runGoogle {
@@ -98,6 +98,33 @@ input:focus{
     background-position: 0 5px;
     width: 24px;
     height: 42px;
+}
+
+@media (max-device-width: 800px) {
+    #main {
+        width: auto;
+    }
+    h1 {
+        margin-top: 200px;
+        font-size: 75px;
+    }
+    h2 {
+        font-size: 50px;
+    }
+    #bar {
+        margin-top: 150px;
+        width: 100%;
+        height: 100px;
+    }
+    #runGoogle {
+        background-size: 50px 80px;
+        background-position: 0 5px;
+        width: 50px;
+        height: 100%;
+    }
+    #searchBar {
+        width: calc(100% - 120px);
+    }
 }
 </style>
 
@@ -191,22 +218,22 @@ function setText() {
             vars[key] = value !== undefined ? value : '';
         }
     );
-    if(vars["q"]){
-    	txt = vars["q"];
-    	return true;
+    if (vars["q"]) {
+        txt = vars["q"];
+        return true;
+    } else {
+        return false;
     }
-    else { return false; }
 }
 
 function start() {
-    if( setText() ){
-    	moveToSearchBar();
-    }
-    else{
-    	$("#pointer").remove();
-    	$("content form").prop("action",document.location);
-    	$("#searchBar").removeAttr('readonly').focus();
-    	$("#runGoogle").removeAttr('readonly');
+    if (setText()) {
+        moveToSearchBar();
+    } else {
+        $("#pointer").remove();
+        $("content form").prop("action", document.location);
+        $("#searchBar").removeAttr('readonly').focus();
+        $("#runGoogle").removeAttr('readonly');
     }
 }
 
