--- a/lmgtfy/index.html
+++ b/lmgtfy/index.html
@@ -106,7 +106,7 @@ input:focus {
     }
     h1 {
         margin-top: 200px;
-        font-size: 75px;
+        font-size: 120px;
     }
     h2 {
         font-size: 50px;
@@ -123,7 +123,9 @@ input:focus {
         height: 100%;
     }
     #searchBar {
+        height: calc(100% - 7px);
         width: calc(100% - 120px);
+        font-size: 70px;
     }
 }
 </style>
