[IO] Add page for "Quick jQuery integration" chrome extension

--- a/io/index.html
+++ b/io/index.html
@@ -65,6 +65,17 @@
                         <h1>URL Encoder / Decoder</h1>
                     </a>
                 </div>
+                <div class="col-sm-4 portfolio-item">
+                    <a href="./quickjquery" class="portfolio-link">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img id="imgModal1" src="/img/jquery-logo.gif" class="img-responsive" alt="Cabin">
+                        <h1>Quick jQuery integration</h1>
+                    </a>
+                </div>
             </div>
         </div>
     </section>
